syntax = "proto3";

package p2p.v1;

message SlotUpdate {
  uint64 commit_id = 1;
  uint64 slot_id = 2;
  oneof update {
    bytes artifact = 3;
    // ID of the artifact the sending peer has.
    // The ID can be used to explicitly fetch the artifact.
    bytes id = 5;
  }
  reserved 4;
}
